--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 activityKtx = "1.10.1"
-agp = "8.9.2"
+agp = "8.10.1"
 converterGson = "2.9.0"
 firebaseBom = "33.11.0"
 gson = "2.12.1"
@@ -50,6 +50,7 @@ room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomKtx
 androidx-room-runtime-android = { group = "androidx.room", name = "room-runtime-android", version.ref = "roomRuntimeAndroid" }
 glide = "com.github.bumptech.glide:glide:4.15.1"
 glide-compiler = { group = "com.github.bumptech.glide", name = "compiler", version = "4.15.1" }
+androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version = "1.1.0" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
